kubernetes/production/booklore/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booklore
  namespace: books
  labels:
    helm.sh/chart: booklore-0.1.0
    app.kubernetes.io/name: booklore
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: booklore
      app.kubernetes.io/instance: booklore
  template:
    metadata:
      labels:
        app.kubernetes.io/name: booklore
        app.kubernetes.io/instance: booklore
        app.kubernetes.io/version: "latest"
    spec:
      serviceAccountName: booklore
      containers:
        - name: booklore
          image: grimmory/grimmory:v2.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6060
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: books
              mountPath: /books/lib
            - name: transfer-books
              mountPath: /books/transfer
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: booklore-data
        - name: transfer-books
          persistentVolumeClaim:
            claimName: transfer-books
        - name: books
          persistentVolumeClaim:
            claimName: books
