kubernetes/production/booklore/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: booklore
  namespace: books
  labels:
    helm.sh/chart: booklore-0.1.0
    app.kubernetes.io/name: booklore
    app.kubernetes.io/instance: booklore
    app.kubernetes.io/version: "0.38.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 6060
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: booklore
    app.kubernetes.io/instance: booklore
